# second-brain-ocr

./: .copilot-instructions.md  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ACR_DEPLOYMENT.md  Dockerfile  LOCAL_TESTING.md  PORTAINER_DEPLOYMENT.md  README.md  build-acr.sh  build-and-push.sh  coverage.json  docker-compose.acr.yml  docker-compose.yml  main.py  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
docs/: CICD_SETUP.md  NOTIFICATIONS.md
scripts/: check_index_stats.py  clear_index.py  setup-cicd.sh  test_search.py
src/second_brain_ocr/: config.py  embeddings.py  indexer.py  main.py  notifier.py  ocr.py  state.py  watcher.py
tests/: __init__.py  test_config.py  test_embeddings.py  test_indexer.py  test_integration.py  test_ocr.py  test_state.py  test_watcher.py
